Update content + fix bleed

--- a/main.scss
+++ b/main.scss
@@ -1,18 +1,22 @@
 :root {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.3rem;    
-}
-
-html {
-    font-size: 14px;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.3rem;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-    top: 0;
+  margin: 0;
+}
+
+html {
+  font-size: 14px;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  top: 0;
 }
 
 // * {
@@ -20,120 +24,123 @@ body {
 // }
 
 section.top-section {
-    display: flex;
-    justify-content: space-between;
-    h1 {
-        font-size: 2rem;
-        font-weight: 500;
-    }
-    img {
-        position: relative;
-        height: 10rem;
-        width: 10rem;
-        display: none;
-        right: 3rem;
-    }
+  display: flex;
+  justify-content: space-between;
+  h1 {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+  img {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+    display: none;
+    border-radius: 15px;
+    object-fit: cover;
+    object-position: -13px;
+  }
 }
 
 .certifikat {
-    margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
 ul.education-list li p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .li {
-    position: relative;
+  position: relative;
 }
 
-h4, h3 {
-    margin-bottom: .5rem;
-    margin-top: 2rem;
-    font-weight: 500;
+h4,
+h3 {
+  margin-bottom: 0.5rem;
+  margin-top: 2rem;
+  font-weight: 500;
 }
 
 p {
-    margin-top: .5rem;
-    margin-bottom: .5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 h2 {
-    position: relative;
-    font-weight: 500;
+  position: relative;
+  font-weight: 500;
 }
 
 section {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .hidden {
-    visibility: hidden;
-    height: 0;
+  visibility: hidden;
+  height: 0;
 }
 
 .flex-center {
-    padding: 2rem;
-    width: calc(100vw -4rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    section {
-        position: relative;
-        // background: magenta;
-        width: 100%;
-        max-width: 40rem;
-    }
+  padding: 2rem;
+  width: calc(100vw - 4rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  section {
+    position: relative;
+    // background: magenta;
+    width: 100%;
+    max-width: 40rem;
+  }
 }
 
 .indicator {
-    visibility: hidden;
-    height: .6rem;
-    width: .6rem;
-    border-radius: 50%;
-    margin-left: 1rem;
+  visibility: hidden;
+  height: 0.6rem;
+  width: 0.6rem;
+  border-radius: 50%;
+  margin-left: 1rem;
 }
 
 .green {
-    background: rgb(54, 231, 0);
+  background: rgb(54, 231, 0);
 }
 
 .blue {
-    background: cornflowerblue;
+  background: cornflowerblue;
 }
 
 .upper {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .projectGif {
-    width: 100%;
+  width: 100%;
 }
 
 .for-print {
-    display: none;
+  display: none;
 }
 
 @media (min-width: 600px) {
-    html {
-        font-size: 16px;
+  html {
+    font-size: 16px;
+  }
+  .indicator {
+    visibility: visible;
+  }
+  section.top-section {
+    img {
+      display: unset;
     }
-    .indicator {
-        visibility: visible;
-    }
-    section.top-section {
-        img {
-            display: unset;
-        }
-    }
+  }
 }
 
 @media print {
-    .for-print {
-        display: block;
-    }
-    .for-screen {
-        display: none;
-    }    
+  .for-print {
+    display: block;
+  }
+  .for-screen {
+    display: none;
+  }
 }
